add combinatorics algorithm for numpy arrays

--- a/machine_learning_combinatorics/combinatorics_experiment.ipynb
+++ b/machine_learning_combinatorics/combinatorics_experiment.ipynb
@@ -768,6 +768,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rossr\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c1 in dataset[0].T:\n",
+    "    for c2 in dataset[0].T:\n",
+    "        if c1 is not c2:\n",
+    "            for o_n, o in operators.items():\n",
+    "                res = o(c1, c2).reshape(-1, 1)\n",
+    "                res_train, res_test, y_train, y_test = train_test_split(res, y, test_size = 0.3, random_state = 42)\n",
+    "                clf = LogisticRegression().fit(res_train, y_train)\n",
+    "                y_pred = clf.predict(res_test)\n",
+    "                y_pred_proba = clf.predict_proba(res_test)\n",
+    "                current_f1 = f1_score(y_test, y_pred, average = 'weighted')\n",
+    "                \n",
+    "                if current_f1 > best_f1:\n",
+    "                    best_f1 = current_f1\n",
+    "                    best_cols.append(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
