--- a/machine_learning_combinatorics/combinatorics_experiment.ipynb
+++ b/machine_learning_combinatorics/combinatorics_experiment.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#statistical\n",
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -47,8 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X = pd.DataFrame(dataset[0], columns = ['col_' + str(i) for i in range(dataset[0].shape[1])])\n",
@@ -57,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +140,7 @@
        "4    5.0    3.6    1.4    0.2"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -158,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +174,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -289,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -569,8 +573,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for c in best_cols:\n",
@@ -579,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +701,7 @@
        "4              3.6         3.571429             25.0  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +724,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -743,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -781,11 +787,11 @@
     }
    ],
    "source": [
-    "for c1 in dataset[0].T:\n",
-    "    for c2 in dataset[0].T:\n",
+    "for c1 in range(dataset[0].shape[1]):\n",
+    "    for c2 in range(dataset[0].shape[1]):\n",
     "        if c1 is not c2:\n",
     "            for o_n, o in operators.items():\n",
-    "                res = o(c1, c2).reshape(-1, 1)\n",
+    "                res = o(dataset[0][:,[c1]], dataset[0][:,[c2]])\n",
     "                res_train, res_test, y_train, y_test = train_test_split(res, y, test_size = 0.3, random_state = 42)\n",
     "                clf = LogisticRegression().fit(res_train, y_train)\n",
     "                y_pred = clf.predict(res_test)\n",
@@ -795,6 +801,100 @@
     "                if current_f1 > best_f1:\n",
     "                    best_f1 = current_f1\n",
     "                    best_cols.append(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data = dataset[0]\n",
+    "\n",
+    "for c in best_cols:\n",
+    "    new_data = np.append(new_data, c, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  5.1          3.5          1.4          0.2          1.6          7.14\n",
+      "    3.7          3.64285714  25.5       ]\n",
+      " [  4.9          3.           1.4          0.2          1.9          6.86\n",
+      "    3.5          3.5         24.5       ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_data[:2,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state = 42)\n",
+    "logistic_clf = LogisticRegression()\n",
+    "logistic_clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y_pred = logistic_clf.predict(X_test)\n",
+    "y_pred_proba = logistic_clf.predict_proba(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 1.00\n",
+      "Precision: 1.00\n",
+      "Recall: 1.00\n",
+      "F1 score: 1.00\n",
+      "Log loss: 0.11\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy: {:.2f}'.format(accuracy_score(y_test, y_pred)))\n",
+    "print('Precision: {:.2f}'.format(precision_score(y_test, y_pred, average = 'weighted')))\n",
+    "print('Recall: {:.2f}'.format(recall_score(y_test, y_pred, average = 'weighted')))\n",
+    "print('F1 score: {:.2f}'.format(f1_score(y_test, y_pred, average = 'weighted')))\n",
+    "print('Log loss: {:.2f}'.format(log_loss(y_test, y_pred_proba)))"
    ]
   },
   {
