--- a/machine_learning_combinatorics/feature_engineer_testing.ipynb
+++ b/machine_learning_combinatorics/feature_engineer_testing.ipynb
@@ -67,13 +67,134 @@
     }
    ],
    "source": [
-    "eng = fe.FeatureEngineer(train_test_split, logistic_clf, f1_score, n_best = 2)\n",
+    "eng = fe.FeatureEngineer(train_test_split, logistic_clf, f1_score, n_best = 4)\n",
     "eng_test = eng.fit_transform(iris_x, iris_y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col_0</th>\n",
+       "      <th>col_1</th>\n",
+       "      <th>col_2</th>\n",
+       "      <th>col_3</th>\n",
+       "      <th>col_0_mul_col_2</th>\n",
+       "      <th>col_0_sub_col_2</th>\n",
+       "      <th>col_0_truediv_col_2</th>\n",
+       "      <th>col_0_truediv_col_3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>7.14</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>3.642857</td>\n",
+       "      <td>25.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>6.86</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>24.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>6.11</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>3.615385</td>\n",
+       "      <td>23.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>6.90</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>3.066667</td>\n",
+       "      <td>23.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>7.00</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>3.571429</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col_0  col_1  col_2  col_3  col_0_mul_col_2  col_0_sub_col_2  \\\n",
+       "0    5.1    3.5    1.4    0.2             7.14              3.7   \n",
+       "1    4.9    3.0    1.4    0.2             6.86              3.5   \n",
+       "2    4.7    3.2    1.3    0.2             6.11              3.4   \n",
+       "3    4.6    3.1    1.5    0.2             6.90              3.1   \n",
+       "4    5.0    3.6    1.4    0.2             7.00              3.6   \n",
+       "\n",
+       "   col_0_truediv_col_2  col_0_truediv_col_3  \n",
+       "0             3.642857                 25.5  \n",
+       "1             3.500000                 24.5  \n",
+       "2             3.615385                 23.5  \n",
+       "3             3.066667                 23.0  \n",
+       "4             3.571429                 25.0  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eng_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +206,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -110,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
