add extrema handling Add the ability to create features of the type <extremum> <column1> <operator> <column2>. Example: max(column1) / column 2. In this case the extremum is the maximum value of feature 1 and the complete feature is the maximum of column 1 divided by column 2.

--- a/machine_learning_combinatorics/feature_engineer_testing.ipynb
+++ b/machine_learning_combinatorics/feature_engineer_testing.ipynb
@@ -67,7 +67,7 @@
     }
    ],
    "source": [
-    "eng = fe.FeatureEngineer(train_test_split, logistic_clf, f1_score, n_best = 4)\n",
+    "eng = fe.FeatureEngineer(train_test_split, logistic_clf, f1_score, n_best = 15)\n",
     "eng_test = eng.fit_transform(iris_x, iris_y)"
    ]
   },
@@ -101,10 +101,21 @@
        "      <th>col_1</th>\n",
        "      <th>col_2</th>\n",
        "      <th>col_3</th>\n",
-       "      <th>col_0_mul_col_2</th>\n",
-       "      <th>col_0_sub_col_2</th>\n",
+       "      <th>min_(col_0)_truediv_col_3</th>\n",
+       "      <th>max_(col_2)_sub_col_2</th>\n",
+       "      <th>col_3_sub_col_1</th>\n",
+       "      <th>min_(col_1)_truediv_col_3</th>\n",
+       "      <th>min_(col_0)_sub_col_3</th>\n",
+       "      <th>col_2_sub_col_1</th>\n",
        "      <th>col_0_truediv_col_2</th>\n",
-       "      <th>col_0_truediv_col_3</th>\n",
+       "      <th>col_2_sub_col_0</th>\n",
+       "      <th>min_(col_2)_truediv_col_3</th>\n",
+       "      <th>col_3_mul_col_2</th>\n",
+       "      <th>col_3_mul_col_0</th>\n",
+       "      <th>max_(col_2)_sub_col_0</th>\n",
+       "      <th>col_2_mul_col_1</th>\n",
+       "      <th>col_2_add_col_1</th>\n",
+       "      <th>max_(col_0)_truediv_col_0</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -114,10 +125,21 @@
        "      <td>3.5</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>7.14</td>\n",
-       "      <td>3.7</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>-3.3</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>-2.1</td>\n",
        "      <td>3.642857</td>\n",
-       "      <td>25.5</td>\n",
+       "      <td>-3.7</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>1.02</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>4.90</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>1.549020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -125,10 +147,21 @@
        "      <td>3.0</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>6.86</td>\n",
-       "      <td>3.5</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>-2.8</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>-1.6</td>\n",
        "      <td>3.500000</td>\n",
-       "      <td>24.5</td>\n",
+       "      <td>-3.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.612245</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -136,10 +169,21 @@
        "      <td>3.2</td>\n",
        "      <td>1.3</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>6.11</td>\n",
-       "      <td>3.4</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>-1.9</td>\n",
        "      <td>3.615385</td>\n",
-       "      <td>23.5</td>\n",
+       "      <td>-3.4</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>4.16</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1.680851</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -147,10 +191,21 @@
        "      <td>3.1</td>\n",
        "      <td>1.5</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>6.90</td>\n",
-       "      <td>3.1</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>-2.9</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>-1.6</td>\n",
        "      <td>3.066667</td>\n",
-       "      <td>23.0</td>\n",
+       "      <td>-3.1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>4.65</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1.717391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -158,29 +213,68 @@
        "      <td>3.6</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>7.00</td>\n",
-       "      <td>3.6</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>-3.4</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>-2.2</td>\n",
        "      <td>3.571429</td>\n",
-       "      <td>25.0</td>\n",
+       "      <td>-3.6</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>5.04</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.580000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   col_0  col_1  col_2  col_3  col_0_mul_col_2  col_0_sub_col_2  \\\n",
-       "0    5.1    3.5    1.4    0.2             7.14              3.7   \n",
-       "1    4.9    3.0    1.4    0.2             6.86              3.5   \n",
-       "2    4.7    3.2    1.3    0.2             6.11              3.4   \n",
-       "3    4.6    3.1    1.5    0.2             6.90              3.1   \n",
-       "4    5.0    3.6    1.4    0.2             7.00              3.6   \n",
+       "   col_0  col_1  col_2  col_3  min_(col_0)_truediv_col_3  \\\n",
+       "0    5.1    3.5    1.4    0.2                       21.5   \n",
+       "1    4.9    3.0    1.4    0.2                       21.5   \n",
+       "2    4.7    3.2    1.3    0.2                       21.5   \n",
+       "3    4.6    3.1    1.5    0.2                       21.5   \n",
+       "4    5.0    3.6    1.4    0.2                       21.5   \n",
        "\n",
-       "   col_0_truediv_col_2  col_0_truediv_col_3  \n",
-       "0             3.642857                 25.5  \n",
-       "1             3.500000                 24.5  \n",
-       "2             3.615385                 23.5  \n",
-       "3             3.066667                 23.0  \n",
-       "4             3.571429                 25.0  "
+       "   max_(col_2)_sub_col_2  col_3_sub_col_1  min_(col_1)_truediv_col_3  \\\n",
+       "0                    5.5             -3.3                       10.0   \n",
+       "1                    5.5             -2.8                       10.0   \n",
+       "2                    5.6             -3.0                       10.0   \n",
+       "3                    5.4             -2.9                       10.0   \n",
+       "4                    5.5             -3.4                       10.0   \n",
+       "\n",
+       "   min_(col_0)_sub_col_3  col_2_sub_col_1  col_0_truediv_col_2  \\\n",
+       "0                    4.1             -2.1             3.642857   \n",
+       "1                    4.1             -1.6             3.500000   \n",
+       "2                    4.1             -1.9             3.615385   \n",
+       "3                    4.1             -1.6             3.066667   \n",
+       "4                    4.1             -2.2             3.571429   \n",
+       "\n",
+       "   col_2_sub_col_0  min_(col_2)_truediv_col_3  col_3_mul_col_2  \\\n",
+       "0             -3.7                        5.0             0.28   \n",
+       "1             -3.5                        5.0             0.28   \n",
+       "2             -3.4                        5.0             0.26   \n",
+       "3             -3.1                        5.0             0.30   \n",
+       "4             -3.6                        5.0             0.28   \n",
+       "\n",
+       "   col_3_mul_col_0  max_(col_2)_sub_col_0  col_2_mul_col_1  col_2_add_col_1  \\\n",
+       "0             1.02                    1.8             4.90              4.9   \n",
+       "1             0.98                    2.0             4.20              4.4   \n",
+       "2             0.94                    2.2             4.16              4.5   \n",
+       "3             0.92                    2.3             4.65              4.6   \n",
+       "4             1.00                    1.9             5.04              5.0   \n",
+       "\n",
+       "   max_(col_0)_truediv_col_0  \n",
+       "0                   1.549020  \n",
+       "1                   1.612245  \n",
+       "2                   1.680851  \n",
+       "3                   1.717391  \n",
+       "4                   1.580000  "
       ]
      },
      "execution_count": 5,
@@ -198,6 +292,46 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 150 entries, 0 to 149\n",
+      "Data columns (total 19 columns):\n",
+      "col_0                        150 non-null float64\n",
+      "col_1                        150 non-null float64\n",
+      "col_2                        150 non-null float64\n",
+      "col_3                        150 non-null float64\n",
+      "min_(col_0)_truediv_col_3    150 non-null float64\n",
+      "max_(col_2)_sub_col_2        150 non-null float64\n",
+      "col_3_sub_col_1              150 non-null float64\n",
+      "min_(col_1)_truediv_col_3    150 non-null float64\n",
+      "min_(col_0)_sub_col_3        150 non-null float64\n",
+      "col_2_sub_col_1              150 non-null float64\n",
+      "col_0_truediv_col_2          150 non-null float64\n",
+      "col_2_sub_col_0              150 non-null float64\n",
+      "min_(col_2)_truediv_col_3    150 non-null float64\n",
+      "col_3_mul_col_2              150 non-null float64\n",
+      "col_3_mul_col_0              150 non-null float64\n",
+      "max_(col_2)_sub_col_0        150 non-null float64\n",
+      "col_2_mul_col_1              150 non-null float64\n",
+      "col_2_add_col_1              150 non-null float64\n",
+      "max_(col_0)_truediv_col_0    150 non-null float64\n",
+      "dtypes: float64(19)\n",
+      "memory usage: 22.3 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "eng_test.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
@@ -206,7 +340,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -231,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -250,6 +384,38 @@
     "print('Precision: {:.2f}'.format(precision_score(y_test, y_pred, average = 'weighted')))\n",
     "print('Recall: {:.2f}'.format(recall_score(y_test, y_pred, average = 'weighted')))\n",
     "print('F1 score: {:.2f}'.format(f1_score(y_test, y_pred, average = 'weighted')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1.0 Index(['min_(col_0)_truediv_col_3'], dtype='object')\n",
+      "1 0.977744855967 Index(['max_(col_2)_sub_col_2'], dtype='object')\n",
+      "2 0.955555555556 Index(['col_3_sub_col_1'], dtype='object')\n",
+      "3 0.955291005291 Index(['min_(col_1)_truediv_col_3'], dtype='object')\n",
+      "4 0.930857709119 Index(['min_(col_0)_sub_col_3'], dtype='object')\n",
+      "5 0.908956228956 Index(['col_2_sub_col_1'], dtype='object')\n",
+      "6 0.884621949138 Index(['col_0_truediv_col_2'], dtype='object')\n",
+      "7 0.864729344729 Index(['col_2_sub_col_0'], dtype='object')\n",
+      "8 0.859166666667 Index(['min_(col_2)_truediv_col_3'], dtype='object')\n",
+      "9 0.832287790183 Index(['col_3_mul_col_2'], dtype='object')\n",
+      "10 0.803631082062 Index(['col_3_mul_col_0'], dtype='object')\n",
+      "11 0.773007856341 Index(['max_(col_2)_sub_col_0'], dtype='object')\n",
+      "12 0.772773109244 Index(['col_2_mul_col_1'], dtype='object')\n",
+      "13 0.753809047142 Index(['col_2_add_col_1'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, s in enumerate(sorted(eng.best_cols, reverse = True)):\n",
+    "    if i < 14:\n",
+    "        print(i, s, eng.best_cols[s].columns)"
    ]
   },
   {
