add predict proba parameter Some scoring functions require classification probabilities instead of labels. To accomodate that, a predict_proba feature is added. When True, the internal scoring of the get_current_score function uses the predict proba method of the selected machine learning model.

--- a/machine_learning_combinatorics/feature_engineer_testing.ipynb
+++ b/machine_learning_combinatorics/feature_engineer_testing.ipynb
@@ -95,21 +95,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.937215909091 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE730>, 'column_name': 'col_1_truediv_col_3', 'x1': 'col_1', 'x2': 'col_3'}\n",
-      "1 0.90625 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE950>, 'column_name': 'col_3_sub_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
-      "2 0.874431818182 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE7B8>, 'column_name': 'col_0_truediv_col_3', 'x1': 'col_0', 'x2': 'col_3'}\n",
-      "3 0.871527777778 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE378>, 'column_name': 'col_2_sub_col_0', 'x1': 'col_2', 'x2': 'col_0'}\n",
-      "4 0.836397058824 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE2F0>, 'column_name': 'col_3_mul_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
-      "5 0.758564814815 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE840>, 'column_name': 'col_3_mul_col_0', 'x1': 'col_3', 'x2': 'col_0'}\n",
-      "6 0.716635338346 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0B95048>, 'column_name': 'col_2_truediv_col_3', 'x1': 'col_2', 'x2': 'col_3'}\n",
-      "7 0.714285714286 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE8C8>, 'column_name': 'col_3_add_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
-      "8 0.689583333333 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE620>, 'column_name': 'col_3_mul_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
-      "9 0.642857142857 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE6A8>, 'column_name': 'col_2_mul_col_1', 'x1': 'col_2', 'x2': 'col_1'}\n",
-      "10 0.616558908046 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE510>, 'column_name': 'col_3_add_col_0', 'x1': 'col_3', 'x2': 'col_0'}\n",
-      "11 0.609375 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBEAE8>, 'column_name': 'col_3_truediv_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
-      "12 0.537137681159 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE9D8>, 'column_name': 'col_3_sub_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
-      "13 0.522693452381 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE400>, 'column_name': 'col_0_truediv_col_1', 'x1': 'col_0', 'x2': 'col_1'}\n",
-      "14 0.498768939394 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE488>, 'column_name': 'col_1_truediv_col_0', 'x1': 'col_1', 'x2': 'col_0'}\n"
+      "0 0.937215909091 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B7B8>, 'column_name': 'col_1_truediv_col_3', 'x1': 'col_1', 'x2': 'col_3'}\n",
+      "1 0.90625 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B9D8>, 'column_name': 'col_3_sub_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
+      "2 0.874431818182 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B840>, 'column_name': 'col_0_truediv_col_3', 'x1': 'col_0', 'x2': 'col_3'}\n",
+      "3 0.871527777778 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B400>, 'column_name': 'col_2_sub_col_0', 'x1': 'col_2', 'x2': 'col_0'}\n",
+      "4 0.836397058824 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B378>, 'column_name': 'col_3_mul_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
+      "5 0.758564814815 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B8C8>, 'column_name': 'col_3_mul_col_0', 'x1': 'col_3', 'x2': 'col_0'}\n",
+      "6 0.716635338346 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F626F158>, 'column_name': 'col_2_truediv_col_3', 'x1': 'col_2', 'x2': 'col_3'}\n",
+      "7 0.714285714286 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B950>, 'column_name': 'col_3_add_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
+      "8 0.689583333333 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B6A8>, 'column_name': 'col_3_mul_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
+      "9 0.642857142857 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B730>, 'column_name': 'col_2_mul_col_1', 'x1': 'col_2', 'x2': 'col_1'}\n",
+      "10 0.616558908046 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B598>, 'column_name': 'col_3_add_col_0', 'x1': 'col_3', 'x2': 'col_0'}\n",
+      "11 0.609375 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629BB70>, 'column_name': 'col_3_truediv_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
+      "12 0.537137681159 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629BA60>, 'column_name': 'col_3_sub_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
+      "13 0.522693452381 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B488>, 'column_name': 'col_0_truediv_col_1', 'x1': 'col_0', 'x2': 'col_1'}\n",
+      "14 0.498768939394 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B510>, 'column_name': 'col_1_truediv_col_0', 'x1': 'col_1', 'x2': 'col_0'}\n"
      ]
     }
    ],
