add kwarg support for splitter and scorer The splitter (e.g. train_test_split) and scorer (e.g. f1_score) functions use certain arguments. The arguments can be different depending on the splitter and scorer functions. The feature engineer now supports kwargs for those functions. This allows the user to call them with their perferred arguments.

--- a/machine_learning_combinatorics/feature_engineer_testing.ipynb
+++ b/machine_learning_combinatorics/feature_engineer_testing.ipynb
@@ -19,7 +19,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import precision_score\n",
     "from sklearn.metrics import recall_score\n",
-    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import f1_score, r2_score, accuracy_score\n",
     "\n",
     "#graphing and display\n",
     "import matplotlib.pyplot as plt\n",
@@ -68,22 +68,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\projects\\experiments\\machine_learning_combinatorics\\feature_engineer.py:26: FutureWarning: reshape is deprecated and will raise in a subsequent release. Please use .values.reshape(...) instead\n",
-      "  res = feature['transformation_function'](df[feature['x1']], df[feature['x2']]).reshape(-1, 1)\n",
-      "C:\\Users\\rossr\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "eng = fe.FeatureEngineer(logistic_clf, f1_score, n_best = 15)\n",
-    "eng.fit(X_train, y_train)"
+    "splitter_kwargs = {'test_size' : 0.3, 'random_state' : 42}\n",
+    "scorer_kwargs = {'average' : 'weighted'}"
    ]
   },
   {
@@ -92,24 +83,44 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rossr\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    }
+   ],
+   "source": [
+    "eng = fe.FeatureEngineer(logistic_clf, f1_score, train_test_split, n_best = 15,\n",
+    "                         scorer_kwargs = scorer_kwargs, splitter_kwargs = splitter_kwargs)\n",
+    "eng.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.937215909091 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B7B8>, 'column_name': 'col_1_truediv_col_3', 'x1': 'col_1', 'x2': 'col_3'}\n",
-      "1 0.90625 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B9D8>, 'column_name': 'col_3_sub_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
-      "2 0.874431818182 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B840>, 'column_name': 'col_0_truediv_col_3', 'x1': 'col_0', 'x2': 'col_3'}\n",
-      "3 0.871527777778 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B400>, 'column_name': 'col_2_sub_col_0', 'x1': 'col_2', 'x2': 'col_0'}\n",
-      "4 0.836397058824 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B378>, 'column_name': 'col_3_mul_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
-      "5 0.758564814815 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B8C8>, 'column_name': 'col_3_mul_col_0', 'x1': 'col_3', 'x2': 'col_0'}\n",
-      "6 0.716635338346 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F626F158>, 'column_name': 'col_2_truediv_col_3', 'x1': 'col_2', 'x2': 'col_3'}\n",
-      "7 0.714285714286 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B950>, 'column_name': 'col_3_add_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
-      "8 0.689583333333 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B6A8>, 'column_name': 'col_3_mul_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
-      "9 0.642857142857 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B730>, 'column_name': 'col_2_mul_col_1', 'x1': 'col_2', 'x2': 'col_1'}\n",
-      "10 0.616558908046 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B598>, 'column_name': 'col_3_add_col_0', 'x1': 'col_3', 'x2': 'col_0'}\n",
-      "11 0.609375 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629BB70>, 'column_name': 'col_3_truediv_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
-      "12 0.537137681159 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629BA60>, 'column_name': 'col_3_sub_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
-      "13 0.522693452381 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B488>, 'column_name': 'col_0_truediv_col_1', 'x1': 'col_0', 'x2': 'col_1'}\n",
-      "14 0.498768939394 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000001B6F629B510>, 'column_name': 'col_1_truediv_col_0', 'x1': 'col_1', 'x2': 'col_0'}\n"
+      "0 0.937215909091 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF598>, 'column_name': 'col_1_truediv_col_3', 'x1': 'col_1', 'x2': 'col_3'}\n",
+      "1 0.90625 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF7B8>, 'column_name': 'col_3_sub_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
+      "2 0.874431818182 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF620>, 'column_name': 'col_0_truediv_col_3', 'x1': 'col_0', 'x2': 'col_3'}\n",
+      "3 0.871527777778 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF1E0>, 'column_name': 'col_2_sub_col_0', 'x1': 'col_2', 'x2': 'col_0'}\n",
+      "4 0.836397058824 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF158>, 'column_name': 'col_3_mul_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
+      "5 0.758564814815 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF6A8>, 'column_name': 'col_3_mul_col_0', 'x1': 'col_3', 'x2': 'col_0'}\n",
+      "6 0.716635338346 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BC6EE18>, 'column_name': 'col_2_truediv_col_3', 'x1': 'col_2', 'x2': 'col_3'}\n",
+      "7 0.714285714286 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF730>, 'column_name': 'col_3_add_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
+      "8 0.689583333333 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF488>, 'column_name': 'col_3_mul_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
+      "9 0.642857142857 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF510>, 'column_name': 'col_2_mul_col_1', 'x1': 'col_2', 'x2': 'col_1'}\n",
+      "10 0.616558908046 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF378>, 'column_name': 'col_3_add_col_0', 'x1': 'col_3', 'x2': 'col_0'}\n",
+      "11 0.609375 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF950>, 'column_name': 'col_3_truediv_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
+      "12 0.537137681159 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF840>, 'column_name': 'col_3_sub_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
+      "13 0.522693452381 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF268>, 'column_name': 'col_0_truediv_col_1', 'x1': 'col_0', 'x2': 'col_1'}\n",
+      "14 0.498768939394 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF2F0>, 'column_name': 'col_1_truediv_col_0', 'x1': 'col_1', 'x2': 'col_0'}\n"
      ]
     }
    ],
@@ -120,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +339,7 @@
        "4                  7.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -390,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +413,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -425,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
