add a feature class

--- a/machine_learning_combinatorics/feature_engineer_testing.ipynb
+++ b/machine_learning_combinatorics/feature_engineer_testing.ipynb
@@ -664,13 +664,14 @@
     "                #obtain score\n",
     "                score = metric['metric'](y_test, y_pred, **metric['kwargs'])\n",
     "                \n",
-    "                #append results\n",
+    "                #append enrichment results\n",
     "                to_append = pd.DataFrame([[dataset_name, enriched, metric_name,\n",
     "                                               model_name, score]],\n",
     "                                             columns = results.columns)\n",
     "                \n",
     "                results = results.append(to_append, ignore_index = True)\n",
     "                \n",
+    "                #append best columns\n",
     "                if model_name == 'logistic':\n",
     "                    for coef, feature in zip(model.coef_[0, :], X_train.columns):\n",
     "                        to_append = pd.DataFrame([[dataset_name, enriched,\n",
@@ -680,6 +681,7 @@
     "                        \n",
     "                        model_columns = model_columns.append(to_append, ignore_index = True)\n",
     "                \n",
+    "                #append the engine's best columns\n",
     "                "
    ]
   },
