add cross validation score

--- a/machine_learning_pipelining/pipelining.ipynb
+++ b/machine_learning_pipelining/pipelining.ipynb
@@ -865,6 +865,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.95473251, 0.97925311, 0.9527897 ])"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(grid.best_estimator_,\n",
+    "                datasets['breast_cancer'].drop('target', axis = 1),\n",
+    "                datasets['breast_cancer'].target,\n",
+    "                scoring = 'f1')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
