add initial setup for multiestimator pipeline

--- a/machine_learning_pipelining/pipelining.ipynb
+++ b/machine_learning_pipelining/pipelining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import make_scorer, classification_report\n",
     "from sklearn.model_selection import learning_curve, cross_val_score, GridSearchCV\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.pipeline import Pipeline, make_pipeline\n",
     "\n",
     "#graphing and display\n",
     "import matplotlib.pyplot as plt\n",
@@ -884,6 +884,149 @@
     "                datasets['breast_cancer'].drop('target', axis = 1),\n",
     "                datasets['breast_cancer'].target,\n",
     "                scoring = 'f1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a Multi-Estimator Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#takes list of estimators and list of scorers\n",
+    "#fits all models, records scores, records fitted models\n",
+    "#uses external train-test split, external make_score\n",
+    "#plots learning curves\n",
+    "#selects best model\n",
+    "#displays statistics per model\n",
+    "#tunes up the parameters of a model\n",
+    "#can use k-fold cross validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiEstimator:\n",
+    "    def __init__(self, estimators, scorer, train_sizes = None, cv = None):\n",
+    "        self.estimators = estimators\n",
+    "        self.scorer = scorer\n",
+    "        self.train_sizes = train_sizes\n",
+    "        self.cv = cv\n",
+    "        self.scores = {}\n",
+    "    \n",
+    "    def fit(self, X, y):\n",
+    "        for estimator_name in self.estimators.keys():\n",
+    "            train_sizes, train_scores, test_scores = learning_curve(self.estimators[estimator_name], \n",
+    "                                                                    #train_sizes,\n",
+    "                                                                    #cv,\n",
+    "                                                                    #scoring,\n",
+    "                                                                    X, y)\n",
+    "            self.scores[estimator_name] = dict([('sizes', train_sizes),\n",
+    "                                                ('train_scores', train_scores),\n",
+    "                                                ('test_scores', test_scores)])\n",
+    "    def score(self, X, y_true):\n",
+    "        pass\n",
+    "    \n",
+    "    def predict(X):\n",
+    "        pass\n",
+    "    \n",
+    "    def predict_log_proba(X):\n",
+    "        pass\n",
+    "    \n",
+    "    def predict_proba(X):\n",
+    "        pass\n",
+    "    \n",
+    "    def draw_learning_curves():\n",
+    "        pass\n",
+    "    \n",
+    "    def get_scoring_report():\n",
+    "        pass\n",
+    "    \n",
+    "    def perform_grid_search(parameter_grid):\n",
+    "        pass\n",
+    "    \n",
+    "    def set_best_model(model_name):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = {'naive_bayes' : GaussianNB(), 'log_reg' : LogisticRegression(), 'tree' : DecisionTreeClassifier()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_explorer = MultiEstimator(models, 'f1')\n",
+    "model_explorer.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'naive_bayes': {'sizes': array([ 26,  86, 145, 205, 265]),\n",
+       "  'train_scores': array([[1.        , 0.96153846, 0.96153846],\n",
+       "         [0.98837209, 0.94186047, 0.94186047],\n",
+       "         [0.95172414, 0.95172414, 0.94482759],\n",
+       "         [0.95121951, 0.95121951, 0.96097561],\n",
+       "         [0.93207547, 0.93584906, 0.9509434 ]]),\n",
+       "  'test_scores': array([[0.81954887, 0.93984962, 0.93181818],\n",
+       "         [0.90977444, 0.91729323, 0.93939394],\n",
+       "         [0.93984962, 0.93984962, 0.93939394],\n",
+       "         [0.93984962, 0.92481203, 0.93181818],\n",
+       "         [0.94736842, 0.91729323, 0.93181818]])},\n",
+       " 'log_reg': {'sizes': array([ 26,  86, 145, 205, 265]),\n",
+       "  'train_scores': array([[1.        , 1.        , 1.        ],\n",
+       "         [1.        , 0.95348837, 0.95348837],\n",
+       "         [0.96551724, 0.94482759, 0.94482759],\n",
+       "         [0.96097561, 0.95121951, 0.95609756],\n",
+       "         [0.95849057, 0.94716981, 0.95849057]]),\n",
+       "  'test_scores': array([[0.81954887, 0.90977444, 0.90909091],\n",
+       "         [0.87969925, 0.94736842, 0.92424242],\n",
+       "         [0.93233083, 0.95488722, 0.90151515],\n",
+       "         [0.92481203, 0.96992481, 0.91666667],\n",
+       "         [0.93233083, 0.97744361, 0.93181818]])},\n",
+       " 'tree': {'sizes': array([ 26,  86, 145, 205, 265]),\n",
+       "  'train_scores': array([[1., 1., 1.],\n",
+       "         [1., 1., 1.],\n",
+       "         [1., 1., 1.],\n",
+       "         [1., 1., 1.],\n",
+       "         [1., 1., 1.]]),\n",
+       "  'test_scores': array([[0.83458647, 0.92481203, 0.87878788],\n",
+       "         [0.89473684, 0.89473684, 0.93181818],\n",
+       "         [0.93233083, 0.87218045, 0.93181818],\n",
+       "         [0.89473684, 0.89473684, 0.93939394],\n",
+       "         [0.93984962, 0.91729323, 0.92424242]])}}"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_explorer.scores"
    ]
   },
   {
